kubernetes/hivebox-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hivebox-service
spec:
  selector:
    app: hivebox
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
      nodePort: 30080
  type: NodePort
