kubernetes/hivebox-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hivebox-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"     # force HTTPS
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - hivebox.local
    secretName: hivebox-tls-secret
  rules:
  - host: hivebox.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: hivebox-service
            port:
              number: 80
